# floppy

./: README.md
.github/workflows/: server-checks.yml
frontend/: .env.example  index.d.ts  nuxt.config.ts  package-lock.json  package.json
frontend/assets/: main.css
frontend/components/: Alert.vue  CopyDownloadCommandModal.vue  FilePreview.vue  InputControls.vue  Modal.vue
frontend/components/fileView/: File.vue
frontend/layouts/: default.vue
frontend/middleware/: requireAuthentication.global.ts
frontend/models/: vaults.ts
frontend/pages/index/: index.vue
frontend/pages/login/: index.vue
frontend/pages/vaults/[id]/: index.vue
frontend/utils/: auth.ts  clipboard.ts  fileIcon.ts  files.ts  formatting.ts  promises.ts
server/: .env  .env.example  Cargo.toml
server/migrations/: 20241222213058_initial.down.sql  20241222213058_initial.up.sql  20241224232527_storage_vaults.down.sql  20241224232527_storage_vaults.up.sql  20241231170925_temp_file_access.down.sql  20241231170925_temp_file_access.up.sql
server/src/: config.rs  main.rs
server/src/cli/: arguments.rs  create_user.rs  create_vault.rs  index_vault.rs  mod.rs
server/src/logic/indexing/: local_folder.rs  mod.rs
server/src/models/: mod.rs  users.rs  vaults.rs
server/src/routes/: login.rs  mod.rs  tokens.rs  vaults.rs
server/src/utils/: folders.rs  mod.rs  response_errors.rs  security.rs  user_security.rs  xid.rs
