[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
chrono = "0.4.39"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
poem = "3.1.5"
rand = "0.8.5"
serde = "1.0.216"
serde_json = "1.0.134"
sha3 = "0.10.8"
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio-rustls", "chrono" ] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
xid = "1.1.1"
